pages/assets/css/basic.css
/* ... */
.pg-footer {
    padding: 5em 0;
}

@media (max-width: 767px) {
    .stats-header__title {
        font-size: 42px;
    }
}

.offcanvas.show {
    overflow-x: auto;
    -webkit-box-shadow: 0 0 10px hsl(0deg 0% 4% / 70%);
    box-shadow: 0 0 10px hsl(0deg 0% 4% / 70%);
}

/* Button styles */

.btn {
    --bs-btn-font-weight: var(--font-weight-default);
}
.btn-close:focus, .btn-close:active {
    box-shadow: none;
}
.btn-outline-dark {
    --bs-btn-border-color: black;
}
.btn-xl {
    font-size: 13px;
    padding: 1.5rem;
    border-radius: 0;
    letter-spacing: 0.2em;
    text-transform: uppercase;
}
.btn-outline-dark[data-reverse-color] {
    text-transform: uppercase;
    outline: none;
    color: #fff;
    border: 1px solid black;
    background: #000;
}
.btn-outline-dark[data-reverse-color]:hover, .btn-outline-dark[data-reverse-color]:active, .btn-outline-dark[data-reverse-color]:focus {
    border: 1px solid rgba(0, 0, 0, 0.2);
    background: none !important;
    color: black;
}

.cta_button {
    background-color:rgba(255,255,255,.7);
    font-size: 25px;
    padding: 1.5rem;
    border-radius: 0;
    letter-spacing: 0.2em;
    --bs-btn-border-color: unset;
    --bs-btn-color: #1d82ff;
    --bs-btn-hover-bg: #1d82ff;
}



/* Navbar styles */

.pg-navbar {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    z-index: 100;
    padding: 1em 1em;
}

.pg-navbar.scrolled {
    position: fixed;
    right: 0;
    left: 0;
    top: 0;
    margin-top: -130px;
}
.pg-navbar.scrolled.awake {
    margin-top: 0px;
    -webkit-transition: .3s all ease-out;
    -o-transition: .3s all ease-out;
    transition: .3s all ease-out;
}
.pg-navbar.scrolled.sleep {
    -webkit-transition: .3s all ease-out;
    -o-transition: .3s all ease-out;
    transition: .3s all ease-out;
}
.pg-navbar.scrolled {
    background-color: var(--bs-white);
}
.pg-navbar.scrolled {
    -webkit-box-shadow: 0px 1px 10px -2px rgba(0, 0, 0, 0.15);
    -moz-box-shadow: 0px 1px 10px -2px rgba(0, 0, 0, 0.15);
    box-shadow: 0px 1px 10px -2px rgba(0, 0, 0, 0.15);
}

.navbar-dark {
    --bs-link-color: white;
    --bs-navbar-color: white;
}
.navbar-dark .navbar-brand {
    --bs-navbar-brand-color: white;
    --bs-navbar-brand-hover-color: #b2dcff;
}

.navbar-dark .btn-outline-dark {
    --bs-btn-color: white;
    --bs-btn-border-color: white;
    --bs-btn-hover-bg: black;
}

.navbar-toggler {
    --bs-navbar-toggler-font-size: 30px;
}
.navbar-toggler, .navbar-toggler:active, .navbar-toggler:focus {
    border: none;
    box-shadow: none;
}
.pg-navmenu {
    --bs-bg-opacity: 1;
    padding: 0.5em 1em;
}
.navbar-dark .pg-navmenu {
    background: black;
    --bs-offcanvas-color: white;
}
.navbar-dark .btn-close {
    filter: invert(1) grayscale(100%) brightness(200%);
}
@media ( max-width: 576px ) {
    .navbar__cta {
        order: 2;
        width: 100%;
    }
}

.nav-link {
    --bs-nav-link-font-size: 16px;
    --bs-nav-link-padding-y: 1.5em;
    --nav-link-primary-color: white;
    --nav-link-secondary-color: black;
    border-top: 1px solid var(--nav-link-secondary-color);
    padding-left: 2em;
}
.nav-link:last-child {
    border-bottom: 1px solid var(--nav-link-secondary-color);
}
.nav-link:hover, .nav-link:focus {
    background: var(--nav-link-secondary-color);
    color: var(--nav-link-primary-color);
}
.nav-link:active {
    background: darkgrey;
}
.navbar-dark .nav-link, .navbar-dark .nav-link:last-child {
    border-color: var(--nav-link-primary-color);
}
.navbar-dark .nav-link:last-child {
    border-bottom: 1px solid;
}
.navbar-dark .nav-link:hover, .navbar-dark .nav-link:focus {
    background: var(--nav-link-primary-color);
    color: var(--nav-link-secondary-color);
}
.navbar-dark .nav-link:active {
    background: lightgrey;
}

.share-button {
    width: 30px;
}
.navbar-dark .share-button {
    filter: invert(90%) sepia(100%) saturate(0%) hue-rotate(9deg) brightness(103%) contrast(102%);
}

.icon-button {
    cursor: pointer;
}
.nav-buttons {
    height: 30px;
    border-top: 1px solid;
    padding-top: 1.5em;
    padding-bottom: 1.5em;
    padding-left: 2em;
}

.modal-footer {
    border-top: none;
}

.share-modal__items .list-group-item:first-child {
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
}
.share-modal__items .list-group-item:last-child {
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}
.share-modal__items .list-group-item {
    cursor: pointer;
}
.share__icon {
    width: 20px;
    margin-right: 10px;
}
.copy-notice {
    display: none;
}
.list-group-item-success.list-group-item-action:hover {
    background-color: #b1dfbb;
}
.link-action.list-group-item-success .copy-notice {
    display: inline;
}

.activity__list {
    --pg-activity-badge-size: 20px;
    margin: 0 calc( var(--pg-activity-badge-size) / 2);
    position: relative;
}
.activity-log__item {
    display: flex;
    padding: 0.5rem 0;
}
.activity-log__item::before {
    content: "";
    top: 20px;
    bottom: 0;
    left: 0;
    width: 3px;
    background: #DDD;
    position: absolute;
}
.activity-log__badge {
    margin-right: 20px;
    margin-left: calc( var(--pg-activity-badge-size) / -2 + 1px );
    z-index: 1;
    height: calc( var(--pg-activity-badge-size) * 2 );
    background-color: white;
    display: flex;
    align-items: center;
}
.activity-log__badge > .badge__inner{
    height: calc( var(--pg-activity-badge-size) );
    width: calc( var(--pg-activity-badge-size) );
    border-radius: 50%;
}
.activity-log__body {
    margin-top: 8px;
}


/* Home page styles */

.video-image-link {
    cursor: pointer;
}

/* Datatable styles */

.dtr-title {
    font-weight: bold;
}

